fix: adjust padding in users table and refine overflow styles for better mobile experience

--- a/src/styles/components/_usersTable.module.scss
+++ b/src/styles/components/_usersTable.module.scss
@@ -7,7 +7,7 @@ $border-color: rgba(33, 63, 125, 0.1);
   border: 1px solid rgba(33, 63, 125, 0.06);
   box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
-  padding: 30px 20px 0 20px; 
+  padding: 30px 0px 0 0px; 
   margin-top: 40px;
   width: 100%;
   position: relative;
